update3 index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="container py-5">
             <div class="row g-5 align-items-center mb-5">
                 <div class="col-lg-6">
-                    <h1 class="display-1 mb-4 animated slideInRight">We Make Your <span class="text-primary">Home</span>
+                    <h1 class="display-1 mb-4 animated slideInRight">Liyah membuat kamu <span class="text-primary">Home</span>
                         Better</h1>
                     <h5 class="d-inline-block border border-2 border-white py-3 px-5 mb-0 animated slideInRight">
                         An Award Winning Studio Since 1990</h5>
